# serenity_template

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  cliff.toml  release.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: cd.yml  ci.yml
src/: lib.rs  main.rs  types.rs
src/commands/: mod.rs  ping.rs
src/config/: mod.rs
src/events/: message.rs  mod.rs  ready.rs
src/framework/: error.rs  mod.rs  options.rs  setup.rs
