[package]
name = "serenity_template"
version = "0.0.0"
edition = "2024"
authors = ["t1ltxz-gxd <git@t1ltxz.ninja>"]
description = "Template discord bot using Serenity and Poise with basic hybrid command example."
license = "MIT"
repository = "https://github.com/t1ltxz-gxd/serenity_template"
keywords = ["rust", "discord", "bot", "serenity", "poise"]
categories = ["asynchronous", "command-line-utilities", "network-programming"]
readme = "README.md"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
#anyhow = "1.0"
async-trait = "0.1.89"
#serde = { version = "1.0.228", features = ["derive"] }
#serde_json = "1.0"
serenity = { version = "0.12.4", features = ["full"] }
poise = "0.6"
#songbird = { version = "0.5.0", features = ["serenity"] }
#lavalink-rs = "0.14"
#rust-i18n = "3.1.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "once_cell", "registry", ] }
#tracing-appender = "0.2"
dotenv = "0.15"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "macros"] }
